// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawerList drawer list with hidden applied  1`] = `
<DocumentFragment>
  <ul
    class="pf-v6-c-notification-drawer__list"
    hidden=""
    role="list"
  />
</DocumentFragment>
`;

exports[`NotificationDrawerList renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <ul
    class="pf-v6-c-notification-drawer__list"
    role="list"
  />
</DocumentFragment>
`;
